pushed from origin

--- a/about.html
+++ b/about.html
@@ -15,35 +15,26 @@
 </head>
 
 <body>
-    <header id="site-header" >    
-        <nav class="navbar navbar-expand-lg navbar-dark  shadow fixed-top" >
-            <div class="container" >
-              <a class="navbar-brand" href="index.html">Troll.rocks</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-              <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Troll home</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="about.html">About Troll</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="minecraft.html">Troll Minecraft server</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="https://cdn.discordapp.com/attachments/704473936368238592/751142157024231475/atzomamas.webm">I'm at yo momma house</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="https://www.reddit.com/r/trollface/">Reddit</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header id="site-header" >    
+    <nav class="navbar navbar-expand-lg navbar-dark  shadow fixed-top" >
+        <div class="container" >
+          <a class="navbar-brand" href="index.html">temp jeef.moe holder</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Main</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">Projects</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
 
     <container>
         <main>
@@ -57,39 +48,13 @@
                 </div>
                     <div class="col-md-12">
                       <div class="maintext">
-                        <h1>Join our community at:</h1>
-                        <a class="navbar-brand" style="font-size: 40px;" href="https://www.discord.gg/Troll">Discord.gg/troll</a>
+                        <h1>Temp jeef.moe holder for ETEC class:</h1>
+                        <a class="navbar-brand" style="font-size: 40px;" href="jeef.moe">click to go to jeef.moe (might be offline)</a>
                     </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="maintext">
-                            We started with troll discord just as a joke,
-                            then we realised we can do more.
-                            <br>
-                            Fun events and building a community is our goal.
-                            <br>
-                            Here at the troll discord you can talk to people, 
-                            participate in events, contests, raffles and more. 
-                            <br>
-                            <br>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="maintext">
-                          Socials:
-                          <br>
-                          <a href="https://www.instagram.com/troll.moe/?hl=nl">Instagram: troll.moe</a>
-                          <br>
-                          <a href="https://www.reddit.com/r/trollface">Trollface reddit</a>
-                          <br>
-                          <a href="https://www.youtube.com/channel/UC2pxNZoUUzxwxjNFTaj9Mng">Troll youtube channel</a>
-                          <br>
-                        </div>
                     </div>
                     <div class="col-md-12">
-                      <div class="maintext">
-                        <img src="/img/trollar.png"  alt="Arena" height="500px" width="80%">
-                      </div>
                   </div>
                 </div>
              </div>
@@ -98,12 +63,7 @@
 
     <footer id="site-footer" >
       <div class="row" style="padding-top: 10px!important;">
-        <div class="col-md-6" >
-          <a class="footer-brand"  href="https://www.discord.gg/Troll">Discord.gg/troll</a>
-        </div>
-        <div class="col-md-6">
-          <a class="footer-brand"  href="https://twitter.com/Flashbangy"> Made by Flashbangy</a>
-        </div>
+    
       </div>
     </footer>
 </body>
