--- a/index.html
+++ b/index.html
@@ -18,26 +18,17 @@
   <header id="site-header" >    
       <nav class="navbar navbar-expand-lg navbar-dark  shadow fixed-top" >
           <div class="container" >
-            <a class="navbar-brand" href="index.html">Troll.rocks</a>
+            <a class="navbar-brand" href="index.html">temp jeef.moe holder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Troll home</a>
+                  <a class="nav-link" href="index.html">Main</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About Troll</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="minecraft.html">Troll Minecraft server</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://cdn.discordapp.com/attachments/704473936368238592/751142157024231475/atzomamas.webm">I'm at yo momma house</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://www.reddit.com/r/trollface/">Reddit</a>
+                  <a class="nav-link" href="about.html">Projects</a>
                 </li>
               </ul>
             </div>
@@ -51,29 +42,17 @@
             <div class="row">
               <div class="col-md-12" style="padding:0px;padding-bottom:40px">
                 <div class="mchead"> 
-                  <img src="/img/banner.png"  alt="Arena" height="182" width="100%">
+                  <img src="/img/banner.png"  alt="" height="182" width="100%">
                   <h1 class="mcheadder" style="background-color:rgba(0, 0, 0, 0.8);padding:8px;">
-                      The Troll server
+                      jeef.moe temp website
                   </h1>
                 </div>
                 </div>
                     <div class="col-md-12">
                         <div class="maintext">
-                            We host the Troll server discord and the Troll minecraft server.
-                          <br>
-                          <br>
-                          The discord server revolves around the troll face, memes, videos and events.
-                          <br>
-                          <br>
-                          Come join us at Discord.gg/troll to experience events, memes, people and more!
+                            tmux ruined my centos server idk why so have to rebuild that vps but I need something for class.
                         </div>
                     </div>
-                    <div class="col-md-12">
-                      <div class="maintext">
-                        <div >
-                          <iframe width="360" height="360" src="https://www.youtube.com/embed/4Ip2SoxfM7w" frameborder="0" allowfullscreen></iframe>
-                       </div>
-                      </div>
                   </div>
 
 
@@ -85,13 +64,6 @@
   <!--footer, links-->
     <footer id="site-footer" >
       <div class="row" style="padding-top: 10px!important;">
-        <div class="col-md-6">
-          <a class="footer-brand"  href="https://www.discord.gg/Troll">Discord.gg/troll</a>
-        </div>
-        <div class="col-md-6">
-          <a class="footer-brand"  href="https://twitter.com/Flashbangy"> Made by Flashbangy</a>
-        </div>
-      </div>
     </footer>
   <!--footer, links-->
 </body>
