--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="theme-color" content="#212529">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/704473936368238592/751508022886531132/icon.png" />
-    <title>Trolled</title>
+    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/fife/ABSRlIrlCDJ14tZCACfWzbTQD8TyLULs4nfsaIWFIHNxegbiB9X9DfVwHHw1KUaJA1yVC_Q-vVmGiYheod2Y7J1t14xn_l7EBTa6j6TLKnJIqKq2tYJ0aHv6BGkLwPk9qJDrs8gGcrZp47KYEQhHugODy1J-oheipfm3l07XdX5vAu7SlNxiJO_7vWOVTLC9LneSdRPSWYjhKCvIRgP0aQyp6hEshjdoJBtv3Jgwqqla2h24oEBEpF48fVKDLzfYa8ivgR-iyUKktCCfzVFOJJ44Rtgz44rTtvzVy07T4ShHuqlWJ77RIc1ex0WWUAoPbJwB5yOwK6rJ1UBCPPprVrlYMfDxTIZsoubjZWkaif05VJwHS9dbkhQhkzWlcrcMg0nUECi0o-QGG4B7o-QXURbMwiJ-_1llGirAxMg3tlGRi6IQgo-32nLxHkaW-uGpdmY8GxDbKw-1FBwwagTXw751v-R9PH4w8O3keoR_DQyR43TULBrOPZSdEFkG0N_amwRoD-WigCopL1xZWvkJghlgiVGB7OLjRO4qKqdeu8EmG4eSXiOPlzHj6VleapAyD-YkAdp5TJHD2FHh6YzE0ThEnf431BYRZuYnpKMj0v7zVpC3BK5xTD_U8QDJhcYyXT4Hg1GFBZV8-tvNAMwBS0TMIjKdxMlSK4WTfJ2StZZiwEIdnJi0ftBQn3qzOqs_TUmdDFO0iFLdanRQhI5tkP9d5EkcS7sPa46YUS3AO-jyJs816g=s83-c" />
+    <title>jeef.moe</title>
 </head>
 
 <body>
